WIP: Multiple Namespaces (#138)
* [CN-1462]: Add namespaces support

* Namespaces implementation

- Deprecates the `namespace` field
- Adds support for multiple namespaces using the `namespaces` field
- Handles usage of deprecated field
- Updates ginkgo testing framework to v2
