# internal/api/core/kubernetes/delete.go
@@ -26,8 +26,9 @@ func (cc *Controller) Delete(c *gin.Context, dm DeleteManifestRequest) {
 		return
 	}
 
-	if provider.Namespace != nil {
-		namespace = *provider.Namespace
+	// Preserve backwards compatibility
+	if len(provider.Namespaces) == 1 {
+		namespace = provider.Namespaces[0]
 	}
 
 	do := metav1.DeleteOptions{}
@@ -64,6 +65,12 @@ func (cc *Controller) Delete(c *gin.Context, dm DeleteManifestRequest) {
 		name := a[1]
 
 		err = provider.ValidateKindStatus(kind)
+		if err != nil {
+			clouddriver.Error(c, http.StatusBadRequest, err)
+			return
+		}
+
+		err = provider.ValidateNamespaceAccess(namespace)
 		if err != nil {
 			clouddriver.Error(c, http.StatusBadRequest, err)
 			return
@@ -132,6 +139,12 @@ func (cc *Controller) Delete(c *gin.Context, dm DeleteManifestRequest) {
 
 		for _, kind := range dm.Kinds {
 			err = provider.ValidateKindStatus(kind)
+			if err != nil {
+				clouddriver.Error(c, http.StatusBadRequest, err)
+				return
+			}
+
+			err = provider.ValidateNamespaceAccess(namespace)
 			if err != nil {
 				clouddriver.Error(c, http.StatusBadRequest, err)
 				return
