# internal/api/core/kubernetes/patch.go
@@ -24,8 +24,9 @@ func (cc *Controller) Patch(c *gin.Context, pm PatchManifestRequest) {
 		return
 	}
 
-	if provider.Namespace != nil {
-		namespace = *provider.Namespace
+	// Preserve backwards compatibility
+	if len(provider.Namespaces) == 1 {
+		namespace = provider.Namespaces[0]
 	}
 
 	b, err := json.Marshal(pm.PatchBody)
@@ -46,6 +47,12 @@ func (cc *Controller) Patch(c *gin.Context, pm PatchManifestRequest) {
 	}
 
 	err = provider.ValidateKindStatus(kind)
+	if err != nil {
+		clouddriver.Error(c, http.StatusBadRequest, err)
+		return
+	}
+
+	err = provider.ValidateNamespaceAccess(namespace)
 	if err != nil {
 		clouddriver.Error(c, http.StatusBadRequest, err)
 		return
