# internal/api/core/kubernetes/runjob.go
@@ -29,11 +29,19 @@ func (cc *Controller) RunJob(c *gin.Context, rj RunJobRequest) {
 	}
 
 	namespace := ""
-	if provider.Namespace != nil {
-		namespace = *provider.Namespace
+
+	// Preserve backwards compatibility
+	if len(provider.Namespaces) == 1 {
+		namespace = provider.Namespaces[0]
 	}
 
 	kubernetes.SetNamespaceOnManifest(&u, namespace)
+
+	err = provider.ValidateNamespaceAccess(u.GetNamespace()) // pass in the current manifest's namespace
+	if err != nil {
+		clouddriver.Error(c, http.StatusBadRequest, err)
+		return
+	}
 
 	err = kube.AddSpinnakerAnnotations(&u, rj.Application)
 	if err != nil {
